test/Fail/SmartRewriteSimpleLoop.err
SmartRewriteSimpleLoop.agda:8.1-8: warning: -W[no]RewriteLHSSubterm
_ : x ≡ suc x  is not a legal rewrite rule, since the left-hand
side of a rewrite rule introduced by with/rewrite is a structural
subterm of the right-hand side (which can cause non-termination)
when checking that the pattern refl has type x ≡ suc x

SmartRewriteSimpleLoop.agda:8.1-8: error: [InvalidatedLocalRewriteRule]
Local rewrite rule invalidated after a pattern-match
when checking that the pattern refl has type x ≡ suc x
